[project]
name = "learntoclarify"
version = "0.1.0"
description = "RL on verifiable rewards for LLM to learn to ask clarifying questions"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "datasets>=3.3.2",
    "huggingface-hub>=0.29.1",
    "modal>=0.73.78",
    "verifiers",
]

[tool.uv.sources]
verifiers = { git = "https://github.com/sutyum/verifiers.git" }
